--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: var(--card-header);
+  background-color: transparent;
   padding: 1rem;
   text-align: center;
   border-radius: 0 0 80px 0;
@@ -13,7 +13,7 @@
 }
 
 .header-logo {
-  height: 3rem;
+  height: 2.25rem;
   margin: 0 auto;
 }
 
@@ -30,7 +30,7 @@
   }
   
   .header-logo {
-    height: 3.5rem;
+    height: 2.625rem;
   }
 }
 
@@ -46,6 +46,6 @@
   }
   
   .header-logo {
-    height: 4rem;
+    height: 3rem;
   }
 } 
