--- a/src/components/AboutBST.css
+++ b/src/components/AboutBST.css
@@ -13,7 +13,7 @@
 }
 
 .about-text {
-  font-size: 0.875rem;
+  font-size: 1.25rem;
   color: rgba(60, 64, 54, 0.9);
   line-height: 1.6;
   text-align: center;
@@ -23,7 +23,21 @@
 /* Responsive font sizing */
 @media (max-width: 480px) {
   .about-text {
-    font-size: 0.8rem;
+    font-size: 1rem;
     line-height: 1.5;
+  }
+}
+
+@media (min-width: 481px) and (max-width: 768px) {
+  .about-text {
+    font-size: 1.125rem;
+    line-height: 1.55;
+  }
+}
+
+@media (min-width: 1024px) {
+  .about-text {
+    font-size: 1.375rem;
+    line-height: 1.65;
   }
 } 
